tests/vertical-slice/accept/vec_string_range_slice.hew
fn main() {
    let xs: Vec<string> = Vec::new();
    xs.push("red");
    xs.push("green");
    xs.push("blue");

    let head = xs[0..2];
    println(head.len());
    println(head[0]);
    println(head[1]);
}
