tests/vertical-slice/reject/move_into_tuple_vec.hew
fn main() -> i64 {
    let values: Vec<string> = Vec::new();
    values.push("alpha");
    let _pair = (values, 1);
    values.len()
}
